--- a/conecct.html
+++ b/conecct.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html!>
 <html>
    <head>
+   	   <mata> 
       <title>Damb</title>
-      <link href="Main.php"> 
    </head>
    <body>
+   	<h1><a href="Main.php">Перейти на сайт</a></h1>
 </body>
 </html>
