--- a/conecct.html
+++ b/conecct.html
@@ -2,8 +2,9 @@
 <html>
    <head>
       <title>Damb</title>
+      <link href="Main.php">
    </head>
    <body>
-   	<h1><a href="Main.php">Перейти на сайт</a></h1>
+   
 </body>
 </html>
