--- a/conecct.html
+++ b/conecct.html
@@ -5,6 +5,8 @@
       <link href="Main.php">
    </head>
    <body>
+   	<?php
    	<h1><a href="Main.php">Перейти на сайт</a></h1>
+   	?>
 </body>
 </html>
