--- a/conecct.html
+++ b/conecct.html
@@ -2,11 +2,11 @@
 <html>
    <head>
       <title>Damb</title>
-      <link href="Main.php">
+      <link href="Main.php"> 
    </head>
    <body>
-   	<?php
-   	<h1><a href="Main.php">Перейти на сайт</a></h1>
-   	?>
+   	<form action="Main.php" method="POST">
+   		<h1><a>Перейти на сайт</a></h1>
+   	</form>
 </body>
 </html>
