--- a/conecct.html
+++ b/conecct.html
@@ -7,6 +7,7 @@
    <body>
    	<form action="Main.php" method="POST">
    		<h1><a>Перейти на сайт</a></h1>
+   		<button type=submit name="do_login" class="button_login" ><a  class="a_login">Log in</a></button>
    	</form>
 </body>
 </html>
