--- a/conecct.html
+++ b/conecct.html
@@ -5,7 +5,7 @@
       <link href="Main.php"> 
    </head>
    <body>
-   	<form action="Main.php" method="POST">
+   	<form action="Main.php">
    		<h1><a>Перейти на сайт</a></h1>
    		<button type=submit name="do_login" class="button_login" ><a  class="a_login">Log in</a></button>
    	</form>
