--- a/conecct.html
+++ b/conecct.html
@@ -5,9 +5,9 @@
       <link href="Main.php"> 
    </head>
    <body>
-   	<form action="Main.php" method="POST">
-   		<h1><a>Перейти на сайт</a></h1>
-   		<button type=submit name="do_login" class="button_login" ><a  class="a_login">Log in</a></button>
-   	</form>
+   	<form method="POST" action="db.php">
+   <input type="text" name="txtIn"/>
+   <input type="submit" value="submit"/>
+</form>
 </body>
 </html>
