--- a/conecct.html
+++ b/conecct.html
@@ -5,7 +5,7 @@
       <link href="Main.php"> 
    </head>
    <body>
-   	<form method="POST" action="db.php">
+   	<form method="POST" action="Main.php">
    <input type="text" name="txtIn"/>
    <input type="submit" value="submit"/>
 </form>
