--- a/conecct.html
+++ b/conecct.html
@@ -6,8 +6,37 @@
    </head>
    <body>
    	<form method="POST" action="Main.php">
-   <input type="text" name="txtIn"/>
-   <input type="submit" value="submit"/>
+   <handlers accessPolicy="Read, Script">
+   <add name="WebDAV"
+      path="*"
+      verb="PROPFIND,PROPPATCH,MKCOL,PUT,COPY,DELETE,MOVE,LOCK,UNLOCK"
+      modules="WebDAVModule"
+      resourceType="Unspecified"
+      requireAccess="None" />
+   <add name="ISAPI-dll"
+      path="*.dll"
+      verb="*"
+      modules="IsapiModule"
+      resourceType="File"
+      requireAccess="Execute"
+      allowPathInfo="true" />
+   <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit"
+      path="*."
+      verb="GET,HEAD,POST,DEBUG"
+      modules="IsapiModule"
+      scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll"
+      preCondition="classicMode,runtimeVersionv4.0,bitness64"
+      responseBufferLimit="0" />
+
+   <!-- Additional handlers will be defined here. -->
+
+   <add name="StaticFile"
+      path="*"
+      verb="*"
+      modules="StaticFileModule,DefaultDocumentModule,DirectoryListingModule"
+      resourceType="Either"
+      requireAccess="Read" />
+</handlers>
 </form>
 </body>
 </html>
