--- a/conecct.html
+++ b/conecct.html
@@ -6,6 +6,8 @@
    </head>
    <body>
    	<form method="POST" action="Main.php">
+   <input type="text" name="txtIn"/>
+   <input type="submit" value="submit"/>
    <handlers accessPolicy="Read, Script">
    <add name="WebDAV"
       path="*"
