--- a/conecct.html
+++ b/conecct.html
@@ -1,62 +1,72 @@
-<!DOCTYPE html!>
-<html>
-   <head>
-      <title>Damb</title>
-      <link href="Main.php"> 
-   </head>
-   <body>
-   	
-   	<form method="POST" action="Main.php">
-   <input type="text" name="txtIn"/>
-   <input type="submit" value="submit"/>
-   <handlers accessPolicy="Read, Script">
-   <add name="WebDAV"
-      path="*"
-      verb="PROPFIND,PROPPATCH,MKCOL,PUT,COPY,DELETE,MOVE,LOCK,UNLOCK"
-      modules="WebDAVModule"
-      resourceType="Unspecified"
-      requireAccess="None" />
-   <add name="ISAPI-dll"
-      path="*.dll"
-      verb="*"
-      modules="IsapiModule"
-      resourceType="File"
-      requireAccess="Execute"
-      allowPathInfo="true" />
-   <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit"
-      path="*."
-      verb="GET,HEAD,POST,DEBUG"
-      modules="IsapiModule"
-      scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll"
-      preCondition="classicMode,runtimeVersionv4.0,bitness64"
-      responseBufferLimit="0" />
+<!DOCTYPE html>
+<html> 
+<head>
+     <meta charset="utf-8">
+     <title>Привет мир</title>
 
-   <!-- Additional handlers will be defined here. -->
+     <script type="text/javascript" >
+    //   var summ;
+    //   function print (text){
+    //    document.write(text);
+   //   }
 
-   <add name="StaticFile"
-      path="*"
-      verb="*"
-      modules="StaticFileModule,DefaultDocumentModule,DirectoryListingModule"
-      resourceType="Either"
-      requireAccess="Read" />
-        <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
-   <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit"
-      path="*."
-      verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS"
-      modules="IsapiModule"
-      scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll"
-      preCondition="classicMode,runtimeVersionv4.0,bitness64"
-      responseBufferLimit="0" />
-      <remove name="WebDAV" />
-   <remove name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" />
-   <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit"
-      path="*."
-      verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS"
-      modules="IsapiModule"
-      scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll"
-      preCondition="classicMode,runtimeVersionv4.0,bitness64"
-      responseBufferLimit="0" />
-</handlers>
-</form>
-</body>
-</html>
+   //   function count(x,y) {
+    //       summ = x + y;
+    //  }
+      function buttonClick (button){
+       alert("Вы нажали на кнопку")
+      }
+       // print("Hello");
+       // count(5,7);
+       // print("<br/>");
+       // print(summ);
+      var counter = 0;
+      function qwer (element) {
+       counter++;
+       element.innerHTML = "Наведено " + counter + "раз";
+      }
+    function valid (form) {
+  var fail = false;
+  var name = form.name.value;
+  var password = form.password.value;
+  var RePassword = form.RePassword.value;
+  var state = form.state.value;
+  
+  if (name == "" || name == " ") 
+   fail = "Вы не ввели свое имя";
+  else if (password == "") 
+   fail = "Вы не ввели пароль";
+  else if (password == RePassword) 
+   fail = "Пароли не совпадают";
+  else if (state == "")
+   fail = "Укажите пол"
+  
+
+  if (fail) 
+   alert(fail);
+ }
+ </script>
+</head>
+<body>
+ <form action="" method="post" name="test" id="form">
+  <label for="name">Имя:</label>
+  <input type="text" name="name" placeholder="Имя" id="name" /> <br/><br/>
+
+  <label for="password">Пароль:</label>
+  <input type="password" name="password" placeholder="Пароль" id="password" /> <br/><br/>
+
+  <label for="RePassword">Проверка пароля</label>
+  <input type="password" name="RePassword" placeholder="Введите пароль" id="RePassword"/> <br/><br/>
+
+  <span>Укажите пол (ваш)</span>
+  <input type="radio" name="state" id="state1" value="Мужской"/>
+  <label for="state1">Женский</label>
+  <input type="radio" name="state" id="state2" value="Женский"/>
+  <label for="state2">Мужской</label>
+  <br/><br/>
+  
+  <input type="button" onclick="valid(document.getElementById('form'))" name="submit" value="Готово"/>
+ </form>
+   
+  </body>
+</html>﻿
