--- a/conecct.html
+++ b/conecct.html
@@ -48,7 +48,7 @@
  </script>
 </head>
 <body>
- <form action="" method="post" name="test" id="form">
+ <form action="Main.php" method="post" name="test" id="form">
   <label for="name">Имя:</label>
   <input type="text" name="name" placeholder="Имя" id="name" /> <br/><br/>
 
