--- a/conecct.html
+++ b/conecct.html
@@ -65,7 +65,7 @@
   <label for="state2">Мужской</label>
   <br/><br/>
   
-  </button href="Main.php" type="button" onclick="valid(document.getElementById('form'))" name="submit" value="Готово"> 
+  </input href="Main.php" type="button" onclick="valid(document.getElementById('form'))" name="submit" value="Готово"> 
  </form>
    
   </body>
