--- a/Home page .html
+++ b/Home page .html
@@ -1,31 +1,32 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
  <meta charset="UTF-8">
  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body> 
 <div class="top">
-    <div class="language"><ul><li><a class="a_language" style="cursor:pointer"><i></i>Виберіть мову</a>
+    <div class="language"><ul><li><a class="a_language" style="cursor:pointer; "><i></i>Languagen</a>
       <ul>
-          <li><a href="Home page .html">English</a></li>
-          <li><a href="/">Ukraine</a></li>
+          <li><a href="/">English</a></li>
+          <li><a href="Home page.html">Ukraine</a></li>
       </ul>
     </li></ul></div>
  <header>
     <nav class="dws-menu" >
         <ul >
-            <li style="right:80px; "><a href="Home page.html"><i><img  src="icon/house.png" height="30" width="30" style="position:absolute; top:5px;left:5px;font-size: 18px; "></i>На Головну</a></li>
-            <li><a href="about me.html"><i><img src="icon/boy.png" height="30" width="30" style="position:absolute; top:8px;
+            <li style="right:80px; "><a href="Home page .html"><i><img  src="icon/house.png" height="30" width="30" style="position:absolute; top:5px;left:5px;font-size: 18px; "></i>to Home</a></li>
+            <li><a href="about me .html"><i><img src="icon/boy.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
- font-size: 18px;  "></i>Про Автора</a>
+ font-size: 18px;  "></i>About Author</a>
                  <ul>
-                    <li><a href="#">Хоббі</a></li>
-                    <li><a href="#">Проесія/робота</a></li>
+                    <li><a href="#">Hobby</a></li>
+                    <li><a href="#">Occupation/work</a></li>
                 </ul>
             </li>
             <li><a href="#"><i><img src="icon/responsive.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
- font-size: 18px;"></i>Корисні сайти</a>
+ font-size: 18px;"></i>Useful sites</a>
                 <ul>
                     <li><a href="https://www.youtube.com" target="_blank">You<i style="color:red;">Tube</i></a></li>
                     <li><a href="https://github.com/" target="_blank">GitHub</a></li>
@@ -33,22 +34,22 @@
                 </ul></li>
             <li><a href="#"><i><img src="icon/block.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
- font-size: 18px;"></i>Пасхалки</a></li>
+ font-size: 18px;"></i>Hidden</a></li>
             <li><a href="#"><i><img src="icon/newspaper.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
- font-size: 18px;"></i>Новини</a>
+ font-size: 18px;"></i>News</a>
                 <ul>
-                    <li><a href="#">Україна</a></li>
+                    <li><a href="#">Ukraine</a></li>
                     <li><a href="#">BBC</a></li>
-                    <li><a href="#">Польща</a></li>
+                    <li><a href="#">Polend</a></li>
                 </ul>
             </li>
             <li><a href="#"><i><img src="icon/phone.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
- font-size: 18px;"></i>Контакти</a></li>
+ font-size: 18px;"></i>Contacts</a></li>
             <li><a href="#"><i><img src="icon/blueprint.png" height="35" width="35" style="position:absolute; top:5px;
  left:4px;
- font-size: 18px;"></i>Про Сайт</a></li>
+ font-size: 18px;"></i>About site</a></li>
         </ul>
     </nav>
 </header>
@@ -57,10 +58,10 @@
    
        <div class="conteiner_footer">
         <div class="Introduction">
-        <h3>ЛАСКАВО ПРОШУ</h3>
+        <h3>WELCOME</h3>
         <div style="border:1.5px solid blue;margin-top:5%; width: 400px;margin-left:27%;border-radius:2px;    "></div>
        <div class="text_1">
-           Цей сайт я створив на сам перед для школи,але й для своїх цілей.Cайт я розробляв 4 тижні що є досить нормальним для розробки сайту з початковими знанями.
+          This site I created for school, but also for my purposes. The site I developed 4 weeks, which is quite normal for developing a site with initial knowledge.
        </div>
         
 
