Update Home page .html

--- a/Home page .html
+++ b/Home page .html
@@ -8,8 +8,8 @@
 <div class="top">
     <div class="language"><ul><li><a class="a_language" style="cursor:pointer; "><i></i>Languagen</a>
       <ul>
-          <li><a href="/">English</a></li>
-          <li><a href="Home page.html">Ukraine</a></li>
+          <li><a href="Home page .html">English</a></li>
+          <li><a href="home page.html">Ukraine</a></li>
       </ul>
     </li></ul></div>
  <header>
