--- a/Home page .html
+++ b/Home page .html
@@ -3,6 +3,8 @@
 <head>
  <meta charset="UTF-8">
  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="shortcut icon" href="icon/internet.png" type="image/png">
+  <title>My Site</title>
 </head>
 <body> 
 <div class="top">
