--- a/home page.html
+++ b/home page.html
@@ -16,7 +16,7 @@
  <header>
     <nav class="dws-menu" >
         <ul >
-            <li style="right:80px; "><a href="Home page.html"><i><img  src="icon/house.png" height="30" width="30" style="position:absolute; top:5px;left:5px;font-size: 18px; "></i>На Головну</a></li>
+            <li style="right:80px; "><a href="home page.html"><i><img  src="icon/house.png" height="30" width="30" style="position:absolute; top:5px;left:5px;font-size: 18px; "></i>На Головну</a></li>
             <li><a href="about me.html"><i><img src="icon/boy.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
  font-size: 18px;  "></i>Про Автора</a>
