--- a/about me .html
+++ b/about me .html
@@ -10,7 +10,7 @@
 <div class="top">
     <div class="language"><ul><li><a class="a_language" style="cursor:pointer; "><i></i>Languagen</a>
       <ul>
-          <li><a href="/">English</a></li>
+          <li><a href="about me .html">English</a></li>
           <li><a href="about me.html">Ukraine</a></li>
       </ul>
     </li></ul></div>
