--- a/home page.html
+++ b/home page.html
@@ -62,7 +62,7 @@
         <h3>ЛАСКАВО ПРОШУ</h3>
         <div style="border:1.5px solid blue;margin-top:5%; width: 400px;margin-left:27%;border-radius:2px;    "></div>
        <div class="text_1">
-           Цей сайт я створив на сам перед для школи,але й для своїх цілей.Cайт я розробляв 4 тижні що є досить нормальним для розробки сайту з початковими знанями.
+           Цей сайт я створив на сам перед для школи,але й для своїх цілей.Cайт я розробляв 4 тижні що є досить нормальним для розробки сайту з початковими знанями....
        </div>
         
 
