--- a/about me .html
+++ b/about me .html
@@ -3,14 +3,12 @@
 <head>
  <meta charset="UTF-8">
  <link rel="stylesheet" type="text/css" href="style.css">
- <link rel="shortcut icon" href="icon/internet.png" type="image/png">
-  <title>My Site</title>
 </head>
 <body> 
 <div class="top">
     <div class="language"><ul><li><a class="a_language" style="cursor:pointer; "><i></i>Languagen</a>
       <ul>
-          <li><a href="about me .html">English</a></li>
+          <li><a href="/">English</a></li>
           <li><a href="about me.html">Ukraine</a></li>
       </ul>
     </li></ul></div>
@@ -56,3 +54,4 @@
     </nav>
 </header>
 </div>
+adamdjladma
