--- a/Home page .html
+++ b/Home page .html
@@ -11,7 +11,7 @@
     <div class="language"><ul><li><a class="a_language" style="cursor:pointer;padding: 5px 10px 5px 15px; "><i></i>Languagen</a>
       <ul>
           <li><a href="Home page .html">English</a></li>
-          <li><a href="home page.html">Ukraine</a></li>
+          <li><a href="Home page.html">Ukraine</a></li>
       </ul>
     </li></ul></div>
  <header>
