--- a/about me.html
+++ b/about me.html
@@ -3,8 +3,6 @@
 <head>
  <meta charset="UTF-8">
  <link rel="stylesheet" type="text/css" href="style.css">
-  <link rel="shortcut icon" href="icon/internet.png" type="image/png">
- <title>Мій Сайт</title>
 </head>
 <body> 
 <div class="top">
@@ -17,7 +15,7 @@
  <header>
     <nav class="dws-menu" >
         <ul >
-            <li style="right:80px; "><a href="home page.html"><i><img  src="icon/house.png" height="30" width="30" style="position:absolute; top:5px;left:5px;font-size: 18px; "></i>На Головну</a></li>
+            <li style="right:80px; "><a href="Home page.html"><i><img  src="icon/house.png" height="30" width="30" style="position:absolute; top:5px;left:5px;font-size: 18px; "></i>На Головну</a></li>
             <li><a href="about me.html"><i><img src="icon/boy.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
  font-size: 18px;  "></i>Про Автора</a>
