--- a/home page.html
+++ b/home page.html
@@ -16,7 +16,7 @@
  <header>
     <nav class="dws-menu" >
         <ul >
-            <li style="right:80px; "><a href="home page.html"><i><img  src="icon/house.png" height="30" width="30" style="position:absolute; top:5px;left:5px;font-size: 18px; "></i>На Головну</a></li>
+            <li style="right:80px; "><a href="Home page.html"><i><img  src="icon/house.png" height="30" width="30" style="position:absolute; top:5px;left:5px;font-size: 18px; "></i>На Головну</a></li>
             <li><a href="about me.html"><i><img src="icon/boy.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
  font-size: 18px;  "></i>Про Автора</a>
@@ -62,7 +62,7 @@
         <h3>ЛАСКАВО ПРОШУ</h3>
         <div style="border:1.5px solid blue;margin-top:5%; width: 400px;margin-left:27%;border-radius:2px;    "></div>
        <div class="text_1">
-           Цей сайт я створив на сам перед для школи,але й для своїх цілей.Cайт я розробляв 4 тижні що є досить нормальним для розробки сайту з початковими знанями....
+           Цей сайт я створив на сам перед для школи,але й для своїх цілей.Cайт я розробляв 4 тижні що є досить нормальним для розробки сайту з початковими знанями.
        </div>
         
 
