--- a/about me.html
+++ b/about me.html
@@ -9,13 +9,13 @@
     <div class="language"><ul><li><a class="a_language" style="cursor:pointer"><i></i>Виберіть мову</a>
       <ul>
           <li><a href="about me .html">English</a></li>
-          <li><a href="/">Ukraine</a></li>
+          <li><a href="about me.html">Ukraine</a></li>
       </ul>
     </li></ul></div>
  <header>
     <nav class="dws-menu" >
         <ul >
-            <li style="right:80px; "><a href="home page.html"><i><img  src="icon/house.png" height="30" width="30" style="position:absolute; top:5px;left:5px;font-size: 18px; "></i>На Головну</a></li>
+            <li style="right:80px; "><a href="Home page.html"><i><img  src="icon/house.png" height="30" width="30" style="position:absolute; top:5px;left:5px;font-size: 18px; "></i>На Головну</a></li>
             <li><a href="about me.html"><i><img src="icon/boy.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
  font-size: 18px;  "></i>Про Автора</a>
