--- a/Home page .html
+++ b/Home page .html
@@ -17,7 +17,7 @@
 <header>
     <nav class="dws-menu" >
         <ul >
-            <li style="right:80px; "><a href="Home page .html"><i><img  src="icon/house.png" height="30" width="30" style="position:absolute; top:5px;left:5px;font-size: 18px; "></i>To Home</a></li>
+            <li style="right:80px; "><a href="Home page.html"><i><img  src="icon/house.png" height="30" width="30" style="position:absolute; top:5px;left:5px;font-size: 18px; "></i>To Home</a></li>
             <li><a href="about me .html"><i><img src="icon/boy.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
  font-size: 18px;  "></i>About Author</a>
@@ -32,20 +32,16 @@
                 <ul>
                     <li><a href="https://www.youtube.com" target="_blank">You<i style="color:red;">Tube</i></a></li>
                     <li><a href="https://github.com/" target="_blank">GitHub</a></li>
-                    <li><a href="http://htmlbook.ru/html/a/href" target="_blank">Html and ect.</a></li>
+                    <li><ul>
+                        <li><a href="https://html-color-codes.info/" target="_blank">HTML color codes</a></li>
+                      </ul><a href="http://htmlbook.ru/html/a/href" target="_blank">Html and ect.</a></li>
                 </ul></li>
             <li><a href="#"><i><img src="icon/block.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
  font-size: 18px;"></i>Hidden</a></li>
-            <li><a href="#"><i><img src="icon/newspaper.png" height="30" width="30" style="position:absolute; top:8px;
+            <li><a href="what's new.html"><i><img src="icon/newspaper.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
- font-size: 18px;"></i>News</a>
-                <ul>
-                    <li><a href="#">Ukraine</a></li>
-                    <li><a href="#">BBC</a></li>
-                    <li><a href="#">Poland</a></li>
-                </ul>
-            </li>
+ font-size: 18px;"></i>what's new?</a></li>
             <li><a href="#"><i><img src="icon/phone.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
  font-size: 18px;"></i>Conntacts</a></li>
@@ -103,7 +99,7 @@
          <img src="img/search.png" style="top:10px;left:40%;position: relative;" >
         </div>
         <div class="text_2 text_3">
-          <div style="bottom: 32px;">
+          <div style="bottom: 35px;">
           <h1 style="text-align:center;right:20px;">Title</h1>
           <p style="text-align:center; font-family: Comic Sans MS, Comic Sans, cursive;">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -120,18 +116,20 @@
           </p>
           </div>
         </div>
-         
-
-
-
-
-
        </div>
-
-
    </div>
+   <!--Низ-->   
    <div class="bottom">
-      
+    <div class="p_gmail">
+      <p>All code on the site is provided for familiarization only and does not offers the download.
+      </p><br>
+      <p>
+        You can contact me over the email:<a style="color:red;cursor:pointer;  ">thefrom333@gmail.com</a>
+      </p><br>
+      <p>
+        Do not write to the site in VK, answers from VK do not reach!
+      </p>
+      </div>
    </div>
 </footer>
 </body>
