--- a/home page.html
+++ b/home page.html
@@ -11,7 +11,7 @@
     <div class="language"><ul><li><a class="a_language" style="cursor:pointer"><i></i>Виберіть мову</a>
       <ul>
           <li><a href="Home page .html">English</a></li>
-          <li><a href="home page.html">Ukraine</a></li>
+          <li><a href="Home page.html">Ukraine</a></li>
       </ul>
     </li></ul></div>
  <header>
