--- a/about me.html
+++ b/about me.html
@@ -9,7 +9,7 @@
     <div class="language"><ul><li><a class="a_language" style="cursor:pointer"><i></i>Виберіть мову</a>
       <ul>
           <li><a href="about me .html">English</a></li>
-          <li><a href="/">Ukraine</a></li>
+          <li><a href="about me.html">Ukraine</a></li>
       </ul>
     </li></ul></div>
  <header>
