--- a/Home page .html
+++ b/Home page .html
@@ -8,9 +8,11 @@
 </head>
 <body> 
 <div class="top">
-    <div class="language"><ul><li><a class="a_language" style="cursor:pointer;padding: 5px 10px 5px 15px; "><i></i>Languagen</a>
+    <div class="language"><ul><li><a class="a_language" style="cursor:pointer;padding: 10px 10px 10px 30px; "><i><img src="icon/translate.png" height="30" width="30" style="position:absolute; top:6px;
+ left:2px;
+ font-size: 18px;"></i>Languagen</a>
       <ul>
-          <li><a href="Home page .html">English</a></li>
+          <li><a href="#">English</a></li>
           <li><a href="home page.html">Ukraine</a></li>
       </ul>
     </li></ul></div>
@@ -28,7 +30,7 @@
             </li>
             <li><a href="#"><i><img src="icon/responsive.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
- font-size: 18px;"></i>useful site</a>
+ font-size: 18px;"></i>Useful site</a>
                 <ul>
                     <li><a href="https://www.youtube.com" target="_blank">You<i style="color:red;">Tube</i></a></li>
                     <li><a href="https://github.com/" target="_blank">GitHub</a></li>
@@ -44,8 +46,12 @@
  font-size: 18px;"></i>what's new?</a></li>
             <li><a href="#"><i><img src="icon/phone.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
- font-size: 18px;"></i>Conntacts</a></li>
-            <li><a href="#"><i><img src="icon/blueprint.png" height="35" width="35" style="position:absolute; top:5px;
+ font-size: 18px;"></i>Conntacts</a>
+                    <ul>
+                    <li><a>098-243-242-23</a></li>
+                   </ul>
+                   </li>
+            <li><a href="#"><i><img src="icon/coding.png" height="35" width="35" style="position:absolute; top:5px;
  left:4px;
  font-size: 18px;"></i>About site</a></li>
         </ul>
