--- a/home page.html
+++ b/home page.html
@@ -8,10 +8,12 @@
 </head>
 <body> 
 <div class="top">
-    <div class="language"><ul><li><a class="a_language" style="cursor:pointer"><i></i>Виберіть мову</a>
+    <div class="language"><ul><li><a class="a_language" style="cursor:pointer;padding: 10px 10px 10px 30px; "><i><img src="icon/translate.png" height="30" width="30" style="position:absolute; top:6px;
+ left:2px;
+ font-size: 18px;"></i>Виберіть мову</a>
       <ul>
           <li><a href="Home page .html">English</a></li>
-          <li><a href="home page.html">Ukraine</a></li>
+          <li><a href="#">Ukraine</a></li>
       </ul>
     </li></ul></div>
  <header>
@@ -46,11 +48,11 @@
  left:9px;
  font-size: 18px;"></i>Контакти</a>
                   <ul>
-                    <li><a>+098-243-242-23</a></li>
+                    <li><a>098-243-242-23</a></li>
                   </ul>
                </li>
-            <li><a href="#"><i><img src="icon/blueprint.png" height="35" width="35" style="position:absolute; top:5px;
- left:4px;
+            <li><a href="#"><i><img src="icon/coding.png" height="36" width="36" style="position:absolute; top:5px;
+ left:3px;
  font-size: 18px;"></i>Про Сайт</a></li>
         </ul>
     </nav>
@@ -89,10 +91,13 @@ cillum не виробляє результуючого і білого доло
 Відібрати з неї перевагу вправу, так що.</p><hr>
         </div>
         <div class="Introduction">
+          <div class="title_centr">
         <h3>ЛАСКАВО ПРОШУ</h3>
-        <div style="border:1.5px solid blue;margin-top:5%; width:500px;margin-left:27%;border-radius:2px;"></div>
+        <div style="border:1.5px solid blue; width:500px;margin-left:27%;border-radius:2px;"></div>
        <div class="text_1">
-           Цей сайт я створив на сам перед для школи,але й для своїх цілей.Cайт я розробляв 4 тижні що є досить нормальним для розробки сайту з початковими знанями.
+           Сайт створено для ознайомленням з кодом HTML,CSS3,JAVASCRIPT,
+        і також для проекту з інформатики.
+       </div>
        </div>
        <div class="text_2">
           <a class="a_text_2">
@@ -112,8 +117,7 @@ cillum не виробляє результуючого і білого доло
 крім того, винні в тих службах, які м'які уми відмовляються від зусиль.Lorem ipsum морква, підвищені знижки, але вони роблять,вівчарі йдуть
 Праця і біль, і життєвість, так що в деяких важливих речей. Протягом багатьох років я прийду,
 Відібрати з неї перевагу вправу, так що стимулюють зусилля, якщо у шкільного округу є ноструд
-продуктів. Дуїс піддавався критиці в задоволенні бажання бути болем у купідаті
-,вівчарі йдуть.
+продуктів. Дуїс піддавався критиці в задоволенні бажання бути болем у купідаті.
           </p>
           </div>
         </div>
@@ -122,7 +126,7 @@ cillum не виробляє результуючого і білого доло
 <!--Низ-->   
    <div class="bottom">
     <div class="p_gmail">
-      <p>Весь код на сайті наданий тільки для ознайомлення і не припускають скачування.
+      <p>Весь код на сайті наданий тільки для ознайомлення.
       </p><br>
       <p>
         Ви можете зі мною звязатися через почту:<a style="color:red;cursor: pointer;  ">thefrom333@gmail.com</a>
