--- a/what's new .html
+++ b/what's new .html
@@ -3,8 +3,8 @@
 <head>
  <meta charset="UTF-8">
  <link rel="stylesheet" type="text/css" href="style.css">
- <title>My Site</title>
   <link rel="shortcut icon" href="icon/internet.png" type="image/png">
+  <title>My Site</title>
 </head>
 <body> 
 <div class="top">
@@ -13,14 +13,14 @@
  font-size: 18px;"></i>Languagen</a>
       <ul>
           <li><a href="#">English</a></li>
-          <li><a href="about me.html">Ukraine</a></li>
+          <li><a href="what's new.html">Ukraine</a></li>
       </ul>
     </li></ul></div>
- <header>
+<header>
     <nav class="dws-menu" >
         <ul >
-            <li style="right:80px; "><a href="Home page .html"><i><img  src="icon/house.png" height="30" width="30" style="position:absolute; top:5px;left:5px;font-size: 18px; "></i>to Home</a></li>
-            <li><a href="#"><i><img src="icon/boy.png" height="30" width="30" style="position:absolute; top:8px;
+            <li style="right:80px; "><a href="Home page .html"><i><img  src="icon/house.png" height="30" width="30" style="position:absolute; top:5px;left:5px;font-size: 18px; "></i>To Home</a></li>
+            <li><a href="about me .html"><i><img src="icon/boy.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
  font-size: 18px;  "></i>About Author</a>
                  <ul>
@@ -30,29 +30,23 @@
             </li>
             <li><a href="#"><i><img src="icon/responsive.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
- font-size: 18px;"></i>Useful sites</a>
+ font-size: 18px;"></i>Useful site</a>
                 <ul>
                     <li><a href="https://www.youtube.com" target="_blank">You<i style="color:red;">Tube</i></a></li>
                     <li><a href="https://github.com/" target="_blank">GitHub</a></li>
-                    <li> 
-                        <ul>
+                    <li><ul>
                         <li><a href="https://html-color-codes.info/" target="_blank">HTML color codes</a></li>
-                        </ul>
-                        <a href="http://htmlbook.ru/html/a/href" target="_blank">Html and ect.</a></li>
+                      </ul><a href="http://htmlbook.ru/html/a/href" target="_blank">Html and ect.</a></li>
                 </ul></li>
             <li><a href="#"><i><img src="icon/block.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
  font-size: 18px;"></i>Hidden</a></li>
             <li><a href="what's new .html"><i><img src="icon/newspaper.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
- font-size: 18px;"></i>What's new?</a> </li>
+ font-size: 18px;"></i>what's new?</a></li>
             <li><a href="#"><i><img src="icon/phone.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
- font-size: 18px;"></i>Contacts</a>
-                   <ul>
-                    <li><a>098-243-242-23</a></li>
-                  </ul>
-              </li>
+ font-size: 18px;"></i>Conntacts</a></li>
             <li><a href="#"><i><img src="icon/coding.png" height="35" width="35" style="position:absolute; top:5px;
  left:4px;
  font-size: 18px;"></i>About site</a></li>
@@ -95,10 +89,8 @@
             consequat. Duis aute irure dolor in reprehenderit in.</p><hr>
         </div>
         <div class="Introduction">
-        <h3>Welcome</h3>
-        <div style="border:1.5px solid blue;margin-top:5%; width:300px;margin-left:38%;border-radius:2px;"></div>
        <div class="text_1">
-           This site I created for school, but for my own purposes. The site I developed 4 weeks, which is quite normal for developing a site with initial knowledge.
+           <h1>No updates...</h1>
        </div>
        <div class="text_2">
           <a class="a_text_2">
