--- a/about me.html
+++ b/about me.html
@@ -22,12 +22,7 @@
             <li style="right:80px; "><a href="home page.html"><i><img  src="icon/house.png" height="30" width="30" style="position:absolute; top:5px;left:5px;font-size: 18px; "></i>На Головну</a></li>
             <li><a href="about me.html"><i><img src="icon/boy.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
- font-size: 18px;  "></i>Про Автора</a>
-                 <ul>
-                    <li><a href="#">Хоббі</a></li>
-                    <li><a href="#">Проесія/робота</a></li>
-                </ul>
-            </li>
+ font-size: 18px;  "></i>Про Автора</a></li>
             <li><a href="#"><i><img src="icon/responsive.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
  font-size: 18px;"></i>Корисні сайти</a>
