--- a/what's new .html
+++ b/what's new .html
@@ -22,12 +22,7 @@
             <li style="right:80px; "><a href="Home page .html"><i><img  src="icon/house.png" height="30" width="30" style="position:absolute; top:5px;left:5px;font-size: 18px; "></i>To Home</a></li>
             <li><a href="about me .html"><i><img src="icon/boy.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
- font-size: 18px;  "></i>About Author</a>
-                 <ul>
-                    <li><a href="#">Hobby</a></li>
-                    <li><a href="#">Occupation/work</a></li>
-                </ul>
-            </li>
+ font-size: 18px;  "></i>About Author</a></li>
             <li><a href="#"><i><img src="icon/responsive.png" height="30" width="30" style="position:absolute; top:8px;
  left:9px;
  font-size: 18px;"></i>Useful site</a>
