--- a/about me .html
+++ b/about me .html
@@ -10,7 +10,7 @@
 <div class="top">
     <div class="language"><ul><li><a class="a_language" style="cursor:pointer;padding: 10px 10px 10px 30px; "><i><img src="icon/translate.png" height="30" width="30" style="position:absolute; top:6px;
  left:2px;
- font-size: 18px;"></i>Languagen</a>
+ font-size: 18px;"></i>Language</a>
       <ul>
           <li><a href="#">English</a></li>
           <li><a href="about me.html">Ukraine</a></li>
